...
            "state": "translated",
            "value": "Espaço"
          }
        }
      }
    },
    "Spaces": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Espaços"
          }
...
